[project]
name = "gsed"
version = "0.0.1"
description = "My awesome Python project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "astropy",
    "scipy",
]
authors = [
    { name = "Jude Wijesekera", email = "vijayanga18@gmail.com" }
]

[build-system]
requires = [
	"setuptools >= 77.0.3",
	"cython"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
 { name = "gsed.csed", sources = ["gsed/unitconversion.pyx", "gsed/unitconversion_cpp.cpp"], include-dirs = ["gsed"], language = "c++" }]



